# NTUST_Thesis

./: README.md
Arduino/buttom_trigger/: buttom_trigger.ino
image_processing/: main.py  run.bash
image_processing/src/: Corner_Algorithm.py  Optimze_result.py  Segmentation_Algorithm.py  Wavelet_Transform.py  image_to_video.py  opencv.py  rename_image.py  video_to_jpg.py
image_processing/src/Algorithm/: FRST.py  hough.py  levelset.py
image_processing/src/process_video/: image_to_video.py  video_to_jpg.py
tiscamera_cpp/: run.sh
tiscamera_cpp/calibration_save_image/: CMakeLists.txt  execute.sh  main.cpp
tiscamera_cpp/trigger_save_image/: Bayer2RGB.cpp  CMakeLists.txt  execute.sh  main.cpp  tcamcamera.cpp
